Return waypoints, comments and imageUrl for each route
