# src/main/api-router.ts
@@ -6,62 +6,43 @@ import bodyParser = require("body-parser");
 import {authenticateUser} from "./auth";
 import * as handlers from "./handlers/index";
 
+export interface HandlerResult {
+  status: number;
+  body: any;
+}
+
+export function handle(
+  handler: (req: Request, res: Response) => Promise<HandlerResult>
+): (req: Request, res: Response) => Promise<any> {
+  return async function (req: Request, res: Response): Promise<any> {
+    try {
+      const {status, body}: HandlerResult = await handler(req, res);
+      res.status(status).json(body);
+    } catch (err) {
+      console.error(err);
+      res.status(500).json({name: "InternalServerError", message: "Internal server error"});
+    }
+  };
+}
+
 export async function createApiRouter(api: Api): Promise<Router> {
   const apiRouter: Router = Router();
 
-  apiRouter.get("/landmarks/:landmark_id", async function (req: Request, res: Response) {
-    try {
-      const landmarkId: string = req.params["landmark_id"];
-      const landmark: resources.Landmark | null = await api.getLandmark(landmarkId);  // TODO(Lyrositor) Check input
-      if (landmark === null) {
-        res
-          .status(404)
-          .json({
-            error: "Route not found"
-          });
-      } else {
-        res
-          .status(200)
-          .json(landmark);
-      }
-    } catch (err) {
-      console.error(err);
-      res.sendStatus(500);
-    }
-  });
+  apiRouter.get(
+    "/landmarks",
+    handle(async function (req: Request, res: Response): Promise<HandlerResult> {
+      return handlers.landmarks.get(api);
+    })
+  );
 
-  apiRouter.get("/landmarks/", async function (req: Request, res: Response) {
-    try {
-      const landmarks: resources.Landmark[] = await api.getLandmarks();
-      res.status(200).json(landmarks);
-    } catch (err) {
-      console.error(err);
-      res.sendStatus(500);
-    }
-  });
+  apiRouter.get(
+    "/landmark/:landmark_id",
+    handle(async function (req: Request, res: Response): Promise<HandlerResult> {
+      return handlers.landmark.get(api, req.params["landmark_id"]);
+    })
+  );
 
-  apiRouter.get("/routes/:route_id", async function (req: Request, res: Response) {
-    try {
-      const routeId: string = req.params["route_id"];
-      const route: resources.Route | null = await api.getRoute(routeId);  // TODO(Lyrositor) Check input
-      if (route === null) {
-        res
-          .status(404)
-          .json({
-            error: "Route not found"
-          });
-      } else {
-        res
-          .status(200)
-          .json(route);
-      }
-    } catch (err) {
-      console.error(err);
-      res.sendStatus(500);
-    }
-  });
-
-  apiRouter.get("/routes/", async function (req: Request, res: Response) {
+  apiRouter.get("/routes", async function (req: Request, res: Response) {
     try {
       const routes: resources.PartialRoute[] = await api.getRoutes();
       return res.status(200).json(routes);
@@ -74,39 +55,32 @@ export async function createApiRouter(api: Api): Promise<Router> {
   apiRouter.post(
     "/routes",
     bodyParser.json(),
-    async function (req: Request, res: Response) {
-      // TODO(demurgos): Retrieve the user from the session or token
+    handle(async function (req: Request, res: Response): Promise<HandlerResult> {
       const user: User | undefined = await authenticateUser(api.context, req);
-      try {
-        const {status, body} = await handlers.routes.post(api, user, req.body);
-        res.status(status).json(body);
-      } catch (err) {
-        console.error(err);
-        res.status(500).json({name: "InternalServerError", message: "Internal server error"});
-      }
-    }
+      return handlers.routes.post(api, user, req.body);
+    })
   );
 
-  apiRouter.get("/users/:user_id", async function (req: Request, res: Response) {
-    try {
-      const userId: string = req.params["user_id"];
-      const user: User | null = await api.getUser(userId);  // TODO(Lyrositor) Check input
-      if (user === null) {
-        res
-          .status(404)
-          .json({
-            error: "Route not found"
-          });
-      } else {
-        res
-          .status(200)
-          .json(user);
-      }
-    } catch (err) {
-      console.error(err);
-      res.sendStatus(500);
-    }
-  });
+  apiRouter.get(
+    "/routes/:route_id",
+    handle(async function (req: Request, res: Response): Promise<HandlerResult> {
+      return handlers.route.get(api, req.params["route_id"]);
+    })
+  );
+
+  apiRouter.get(
+    "/users/:user_id",
+    handle(async function (req: Request, res: Response): Promise<HandlerResult> {
+      return handlers.user.get(api, req.params["user_id"]);
+    })
+  );
+
+  apiRouter.get(
+    "/waypoints/:waypoint_id",
+    handle(async function (req: Request, res: Response): Promise<HandlerResult> {
+      return handlers.waypoint.get(api, req.params["waypoint_id"]);
+    })
+  );
 
   return apiRouter;
 }
